# ghidra

Ghidra/Features/Decompiler/: README.md
Ghidra/Features/Decompiler/src/decompile/cpp/: CMakeLists.txt  Makefile  coreaction.cc  coreaction.hh  funcdata.hh  jumptable.cc  jumptable.hh
Ghidra/Features/Decompiler/src/decompile/datatests/: sparseswitch.xml
Ghidra/Features/Decompiler/src/decompile/unittests/: testsparseswitch.cc
